# neuron-channels

./: .envrc  .gitattributes  README.md  pyproject.toml  ruff.toml
.claude/: settings.json
news/: 2026-04-20.json  2026-04-20.md  2026-04-21.json  2026-04-21.md  2026-04-22.json  2026-04-22.md  2026-04-23.json  2026-04-23.md
overview/: README.md
overview/answers/: README.md
overview/by-category/: cable-theory.md  compartmental-modeling.md  dendritic-computation.md  direction-selectivity.md  patch-clamp.md  retinal-ganglion-cell.md  synaptic-integration.md  voltage-gated-channels.md
overview/costs/: README.md
overview/datasets/: README.md
overview/libraries/: README.md
overview/llm-context/: README.md  full.xml  literature-and-assets.xml  project-memory.xml  project-overview.xml  qa.xml  research-history.xml  results-deep-dive.xml  roadmap.xml  type-answers.xml  type-categories.xml  type-costs.xml  type-datasets.xml  type-libraries.xml  type-metrics.xml  type-papers.xml  type-predictions.xml  type-suggestions.xml  type-task-types.xml  type-tasks.xml
overview/metrics/: README.md
overview/metrics-results/: README.md  direction_selectivity_index.md  tuning_curve_hwhm_deg.md  tuning_curve_reliability.md  tuning_curve_rmse.md
overview/models/: README.md
overview/news/: 2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  README.md
overview/papers/: README.md
overview/predictions/: README.md
overview/suggestions/: README.md
overview/task-types/: README.md
overview/tasks/: README.md
project/: budget.json  description.md
tasks/t0001_brainstorm_results_1/: step_tracker.json  task.json  task_description.md
tasks/t0002_literature_survey_dsgc_compartmental_models/: step_tracker.json  task.json  task_description.md
tasks/t0003_simulator_library_survey/: step_tracker.json  task.json  task_description.md
tasks/t0004_generate_target_tuning_curve/: step_tracker.json  task.json  task_description.md
tasks/t0005_download_dsgc_morphology/: step_tracker.json  task.json  task_description.md
tasks/t0006_brainstorm_results_2/: step_tracker.json  task.json  task_description.md
tasks/t0007_install_neuron_netpyne/: step_tracker.json  task.json  task_description.md
tasks/t0008_port_modeldb_189347/: step_tracker.json  task.json  task_description.md
tasks/t0009_calibrate_dendritic_diameters/: step_tracker.json  task.json  task_description.md
tasks/t0010_hunt_missed_dsgc_models/: step_tracker.json  task.json  task_description.md
tasks/t0011_response_visualization_library/: step_tracker.json  task.json  (+1 more)
(+4041 files in other folders)
