[project]
name = "glite-arf"
version = "0.1.0"
description = "Glite Autonomous Research Framework (Glite ARF) — a file-based, verified workflow for running AI-driven research projects"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
authors = [
    { name = "Glite Tech Ltd", email = "info@glite.ai" },
]
maintainers = [
    { name = "Vassili Philippov", email = "vassili@glite.ai" },
]
keywords = [
    "ai",
    "agents",
    "research",
    "reproducibility",
    "claude-code",
    "codex",
    "llm",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.0",
    "types-tqdm>=4.67.3.20260303",
    "pymupdf>=1.27.2.2",
    "vastai>=1.0.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
]

[project.urls]
Homepage = "https://github.com/GliteTech/glite-arf"
Repository = "https://github.com/GliteTech/glite-arf"
Issues = "https://github.com/GliteTech/glite-arf/issues"
Documentation = "https://github.com/GliteTech/glite-arf/tree/main/arf/docs"
Company = "https://glite.ai"

[tool.uv]
override-dependencies = [
    "cryptography>=46.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arf"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tasks/.*/code/", "tasks/.*/assets/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["arf/tests", "meta"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "flowmark>=0.6.5",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "types-pyyaml",
]

[tool.flowmark]
width = 100
extend-exclude = [
    "overview/",
    "tasks/*/assets/dataset/*/files/",
    "tasks/*/logs/",
]
